Add jetpack branch

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,5 @@
 # install NVDIA CUDA/CUDNN on Ubuntu 22.04 environment
-FROM nvidia/cuda:11.8.0-cudnn8-runtime-ubuntu22.04
+FROM nvcr.io/nvidia/l4t-jetpack:r35.2.1
 
 ENV DEBIAN_FRONTEND="noninteractive"
 ENV QT_X11_NO_MITSHM=1
@@ -10,7 +10,6 @@ RUN apt-get update -y && apt-get install -y --no-install-recommends \
         devilspie \
         gnupg2 \
         mesa-utils \
-        sudo \
         unzip \
         wget \
         xfce4-terminal \
@@ -22,25 +21,26 @@ RUN apt-get update -y
 RUN cp /etc/apt/sources.list /etc/apt/sources.list~
 RUN sed -Ei 's/^# deb-src /deb-src /' /etc/apt/sources.list
 
-# xserver
-RUN apt-get update -y && apt-get install -y qtbase5-dev qtchooser qt5-qmake qtbase5-dev-tools
-RUN ldd /usr/lib/x86_64-linux-gnu/qt5/plugins/platforms/libqxcb.so
-RUN apt-get install -y '^libxcb.*-dev' libx11-xcb-dev libglu1-mesa-dev libxrender-dev libxi-dev libxkbcommon-dev libxkbcommon-x11-dev libxcb-util-dev
-
-# fix corrupted qt5 installation after installing x server
-RUN apt-get --reinstall install -y libqt5svg5
-
 # Setup for installing ros
-RUN apt update -y && sudo apt -y install locales
+RUN apt update -y && apt -y install locales
 RUN locale-gen en_US en_US.UTF-8 && update-locale LC_ALL=en_US.UTF-8 LANG=en_US.UTF-8 && export LANG=en_US.UTF-8
 RUN apt install -y software-properties-common && add-apt-repository universe
 RUN apt update -y && apt install -y curl gnupg lsb-release && rm -rf /var/lib/apt/lists/*
-
-# setup sources.list
-RUN echo "deb http://packages.ros.org/ros2/ubuntu jammy main" > /etc/apt/sources.list.d/ros2-latest.list
-
-# setup keys
-RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys C1CF6E31E6BADE8868B172B4F42ED6FBAB17C654
+RUN apt update -y && apt install -y \
+    python3-flake8-docstrings \
+    python3-pip \
+    python3-pytest-cov \
+    ros-dev-tools
+RUN python3 -m pip install -U \
+    flake8-blind-except \
+    flake8-builtins \
+    flake8-class-newline \
+    flake8-comprehensions \
+    flake8-deprecated \
+    flake8-import-order \
+    flake8-quotes \
+    pytest-repeat \
+    pytest-rerunfailures
 
 # setup environment
 ENV LANG C.UTF-8
@@ -48,23 +48,26 @@ ENV LC_ALL C.UTF-8
 ENV ROS_DISTRO humble
 
 # install ros2 packages
-RUN apt-get update -y && apt-get install -y ros-humble-desktop-full && rm -rf /var/lib/apt/lists/*
+RUN apt-get update -y && apt install curl && curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o /usr/share/keyrings/ros-archive-keyring.gpg
 RUN apt update -y && apt install -y python3-pip python3-rosdep2 && pip3 install colcon-common-extensions vcstool
+RUN echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2/ubuntu $(. /etc/os-release \
+    && echo $UBUNTU_CODENAME) main" | tee /etc/apt/sources.list.d/ros2.list > /dev/null
+RUN mkdir -p ${WORKSPACE}/src && cd ~/ros2_humble && vcs import --input https://raw.githubusercontent.com/ros2/ros2/humble/ros2.repos src && apt upgrade -y 
 
 # Set-up auto-source of workspace for user  
-ADD src/ ${WORKSPACE}/src
 RUN echo "if [ -f ${WORKSPACE}/install/setup.bash ]; then source ${WORKSPACE}/install/setup.bash; fi" >> ~/.bashrc
 
 # auto install workspace dependencies
-RUN rosdep update
+RUN rosdep init && rosdep update
 RUN rosdep install -i -y -r --from-paths ${WORKSPACE}/src --rosdistro humble
+RUN cd ${WORKSPACE} && colcon build --symlink-install
 
 # auto install pip dependencies
 COPY requirements.txt ${WORKSPACE}/requirements.txt
 RUN pip3 install -r ${WORKSPACE}/requirements.txt
 
 # add gazebo models and source gazebo installation
-RUn mkdir -p /root/.gazebo/models && git clone https://github.com/stephenadhi/gazebo_models.git /root/.gazebo/models
+RUN mkdir -p /root/.gazebo/models && git clone https://github.com/stephenadhi/gazebo_models.git /root/.gazebo/models
 RUN echo "source /usr/share/gazebo/setup.sh" >> ~/.bashrc   
 
 # setup entrypoint
