Set executable permission for ros_entrypoint.sh and fix source humble install

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -30,6 +30,7 @@ RUN mkdir -p /home/zedbox && cd /home/zedbox && source /opt/ros/humble/install/s
 
 # setup entrypoint
 COPY ./ros_entrypoint.sh /
+RUN bash -c "chmod +x /ros_entrypoint.sh"
 ENTRYPOINT ["/ros_entrypoint.sh"]
 
 CMD ["bash"]
