Colcon build at the right folder

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -30,9 +30,8 @@ RUN mkdir -p /home/zedbox && cd /home/zedbox && source /opt/ros/humble/install/s
     
 RUN mkdir -p /home/zedbox/ros2_ws/src && cd /home/zedbox/ros2_ws/src && \
     git clone --recursive https://github.com/stereolabs/zed-ros2-wrapper && cd .. && \
-    rosdep update && rosdep install --from-paths src -i -y -r && apt install python3-colcon-common-extensions
-    
-RUN colcon build --symlink-install --cmake-args=-DCMAKE_BUILD_TYPE=Release --parallel-workers $(nproc)
+    rosdep update && rosdep install --from-paths src -i -y -r && apt install python3-colcon-common-extensions && \
+    colcon build --symlink-install --cmake-args=-DCMAKE_BUILD_TYPE=Release --parallel-workers $(nproc)
 
 # setup entrypoint
 COPY ./ros_entrypoint.sh /
