--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,21 +1,11 @@
-# install NVDIA CUDA/CUDNN on Ubuntu 22.04 environment
-FROM nvidia/cuda:11.8.0-cudnn8-runtime-ubuntu22.04
+FROM althack/ros2:foxy-dev
+ENV WORKSPACE=/home/workspace/ros_foxy
+ENV ROS_DISTRO=foxy
+RUN mkdir -p ${WORKSPACE}
 
-ENV DEBIAN_FRONTEND="noninteractive"
-ENV QT_X11_NO_MITSHM=1
-ENV WORKSPACE="/workspaces/locobot" 
-
-RUN apt-get update -y && apt-get install -y --no-install-recommends \
-        ca-certificates \
-        devilspie \
-        gnupg2 \
-        mesa-utils \
-        sudo \
-        unzip \
-        wget \
-        xfce4-terminal \
-        git \
-        nano
+# Add folders for publishers of kml and obstacles
+RUN mkdir -p /home/dst/kml_path
+RUN mkdir -p /home/dst/kml_obstacles
 
 # add deb-src to sources list for installing qt5 build for xserver
 RUN apt-get update -y
@@ -23,45 +13,29 @@ RUN cp /etc/apt/sources.list /etc/apt/sources.list~
 RUN sed -Ei 's/^# deb-src /deb-src /' /etc/apt/sources.list
 
 # xserver
-RUN apt-get update -y && apt-get install -y qtbase5-dev qtchooser qt5-qmake qtbase5-dev-tools
+RUN apt-get update -y
+RUN apt-get build-dep qt5-default -y
 RUN ldd /usr/lib/x86_64-linux-gnu/qt5/plugins/platforms/libqxcb.so
-RUN apt-get install -y '^libxcb.*-dev' libx11-xcb-dev libglu1-mesa-dev libxrender-dev libxi-dev libxkbcommon-dev libxkbcommon-x11-dev libxcb-util-dev
+RUN apt-get install -y '^libxcb.*-dev' libx11-xcb-dev libglu1-mesa-dev libxrender-dev libxi-dev libxkbcommon-dev libxkbcommon-x11-dev 
+RUN apt-get install -y libxcb-util-dev
 
 # fix corrupted qt5 installation after installing x server
 RUN apt-get --reinstall install -y libqt5svg5
 
-# Setup for installing ros
-RUN apt update -y && sudo apt -y install locales
-RUN locale-gen en_US en_US.UTF-8 && update-locale LC_ALL=en_US.UTF-8 LANG=en_US.UTF-8 && export LANG=en_US.UTF-8
-RUN apt install -y software-properties-common && add-apt-repository universe
-RUN apt update -y && apt install -y curl gnupg lsb-release && rm -rf /var/lib/apt/lists/*
-
-# setup sources.list
-RUN echo "deb http://packages.ros.org/ros2/ubuntu jammy main" > /etc/apt/sources.list.d/ros2-latest.list
-
-# setup keys
-RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys C1CF6E31E6BADE8868B172B4F42ED6FBAB17C654
-
-# setup environment
-ENV LANG C.UTF-8
-ENV LC_ALL C.UTF-8
-ENV ROS_DISTRO humble
-
-# install ros2 packages
-RUN apt-get update -y && apt-get install -y ros-humble-desktop-full && rm -rf /var/lib/apt/lists/*
-RUN apt update -y && apt install -y python3-pip python3-rosdep2 && pip3 install colcon-common-extensions vcstool
-
-# Set-up auto-source of workspace for user  
+# Set-up auto-source of workspace for user 
+WORKDIR ${WORKSPACE}
 ADD src/ ${WORKSPACE}/src
 RUN echo "if [ -f ${WORKSPACE}/install/setup.bash ]; then source ${WORKSPACE}/install/setup.bash; fi" >> ~/.bashrc
 
-# auto install workspace dependencies
+# setup rosdep; do not run rosdep install with sudp
+RUN apt-get update --fix-missing -y 
+RUN apt-get install -y --no-install-recommends python3-rosdep2 python3-colcon-common-extensions
 RUN rosdep update
-RUN rosdep install -i -y -r --from-paths ${WORKSPACE}/src --rosdistro humble
+RUN rosdep install -i -y --from-paths ${WORKSPACE}/src --rosdistro foxy
+RUN colcon build
 
-# auto install pip dependencies
 COPY requirements.txt ${WORKSPACE}/requirements.txt
-RUN pip3 install -r ${WORKSPACE}/requirements.txt
+RUN pip install -r ${WORKSPACE}/requirements.txt
 
 # add gazebo models and source gazebo installation
 RUN mkdir -p /root/.gazebo/models && git clone https://github.com/stephenadhi/gazebo_models.git /root/.gazebo/models
