Update workspace name to humble_ws

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,7 +9,8 @@ ENV ZED_SDK_MAJOR=4
 ENV ZED_SDK_MINOR=0
 ENV DEBIAN_FRONTEND="noninteractive"
 ENV QT_X11_NO_MITSHM=1
-ENV WORKSPACE="/workspaces/locobot" 
+ENV WORKSPACE="/workspaces/humble_ws" 
+RUN mkdir -p ${WORKSPACE}
 
 #Install ZED SDK
 RUN echo "*** Installing ZED SDK v${ZED_SDK_MAJOR}.${ZED_SDK_MINOR} for Jetpack ${JETPACK_MAJOR}.${JETPACK_MINOR} (L4T v${L4T_MAJOR}.${L4T_MINOR})"
